--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -32,6 +32,9 @@
 ion-card {
   width: 80%;
 }
+ion-card:hover {
+  cursor: pointer;
+}
 .card {
   background-color: blue;
   color: white;
@@ -83,6 +86,16 @@ ion-card {
   100% {
     opacity: 1;
   }
+}
+
+ion-item {
+  --ion-background-color: white !important;
+}
+.item,
+.list,
+.item-content,
+.item-complex {
+  --ion-background-color: transparent !important;
 }
 
 @-ms-keyframes fadeIn {
