--- a/src/app/panel-home/panel-home.page.scss
+++ b/src/app/panel-home/panel-home.page.scss
@@ -3,10 +3,10 @@
     height: 100%;
 }
 .header {
-    width: 60%;
-    height: 5em;
-    background-color: blueviolet;
-    border-radius: 25px;
+    width: 100%;
+    background-color: white;
+    color: black;
+    height: 3em;
 }
 .headerparent {
     padding: 15px;
@@ -17,15 +17,14 @@
 .name {
     position: relative;
     font-size: 2em;
+    font-weight: bold;
     color: white;
-    top: 0.6em;
-    left: 0.5em;
-    font-family: "Gochi Hand", cursive;
+    font-family: text;
 }
 .items {
     position: relative;
     float: right;
-    bottom: 1em;
+    bottom: 2.3em;
     right: 4px;
 }
 .content {
@@ -116,3 +115,78 @@ th {
 @import url("https://fonts.googleapis.com/css2?family=Yusei+Magic&display=swap");
 
 @import url("https://fonts.googleapis.com/css2?family=Dosis:wght@200&display=swap");
+
+/* The side navigation menu */
+.sidenav {
+    margin-top: 2em;
+    height: 100%; /* 100% Full-height */
+    min-width: 20%; /* 0 width - change this with JavaScript */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Stay on top */
+    top: 0;
+    left: 0;
+    background-color: white; /* Black*/
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    overflow-x: hidden; /* Disable horizontal scroll */
+    padding-top: 60px; /* Place content 60px from the top */
+}
+
+/* The navigation menu links */
+.sidenav a {
+    text-decoration: none;
+    font-size: 25px;
+    font-family: Gotham;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+}
+
+/* When you mouse over the navigation links, change their color */
+.sidenav a:hover,
+.offcanvas a:focus {
+    color: black;
+}
+
+/* Position and style the close button (top right corner) */
+.sidenav .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+}
+
+/* Style page content - use this if you want to push the page content to the right when you open the side navigation */
+#main {
+    transition: margin-left 0.5s;
+    padding: 20px;
+}
+
+/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
+@media screen and (max-height: 450px) {
+    .sidenav {
+        padding-top: 15px;
+    }
+    .sidenav a {
+        font-size: 18px;
+    }
+}
+
+ion-item {
+    border-bottom: 2px solid black;
+}
+
+ion-item:hover {
+    cursor: pointer;
+    border-bottom: 2px solid skyblue;
+}
+.label:hover {
+    font-weight: bold;
+    color: skyblue;
+}
+.a {
+    background-size: 2px;
+    font-size: 18px;
+    font-family: text;
+    color: black;
+}
