--- a/src/app/panel-home/panel-home.page.html
+++ b/src/app/panel-home/panel-home.page.html
@@ -1,9 +1,9 @@
-<ion-content>
-  <div class="fullpage">
+<ion-header>
+  <ion-toolbar color="none" style="background: white;">
     <div *ngIf="width>=845px" class="headerparent">
 
       <div class="header">
-        <div class="name">
+        <div style="color: black;" class="name">
           TheSmartSchool
         </div>
         <div class="items">
@@ -13,195 +13,78 @@
         </div>
       </div>
     </div>
-
-    <div *ngIf="width<845px" class="headerparent">
-
-      <div class="header">
-        <div class="name">
-          TheSmartSchool
-        </div>
-        <div style="position: relative;float:right;bottom: 1em;">
-          <ion-button class="dosisfont" (click)="managefines()" fill="outline" color="light">fines</ion-button>
-          <ion-button (click)="logout()" class="dosisfont" fill="outline" color="light">logout</ion-button>
-
-        </div>
-      </div>
-    </div>
-
-    <div class="content">
-
-      <div *ngIf="width>=1200" class="cards">
-        <ion-grid>
-          <ion-row>
-            <ion-col>
-              <ion-card (click)="gotopayslips()" class="card carda">
-
-                <ion-card-content class="cententheight">
-                  PAY SLIPS
-                </ion-card-content>
-              </ion-card>
-            </ion-col>
-
-            <ion-col>
-              <ion-card (click)="sallerypage()" class="card cardb">
-
-                <ion-card-content class="cententheight">
-                  SALLARIES
-                </ion-card-content>
-              </ion-card>
-            </ion-col>
-
-            <ion-col>
-              <ion-card (click)="gotobills()" class="card cardc">
-
-                <ion-card-content class="cententheight">
-                  BILLS
-                </ion-card-content>
-              </ion-card>
-            </ion-col>
-
-            <ion-col>
-              <ion-card (click)="generateslip()" class="card cardd">
-
-                <ion-card-content class="cententheight">
-                  FEES
-                </ion-card-content>
-              </ion-card>
-            </ion-col>
-
-          </ion-row>
-        </ion-grid>
-      </div>
-
-      <div *ngIf="width>=900 && width<1200" class="cards">
-        <ion-grid>
-          <ion-row>
-            <ion-col size="6">
-              <ion-card (click)="gotopayslips()" class="card carda">
-
-                <ion-card-content class="cententheight">
-                  PAY SLIPS
-                </ion-card-content>
-              </ion-card>
-            </ion-col>
-
-            <ion-col size="6">
-              <ion-card (click)="sallerypage()" class="card cardb">
-
-                <ion-card-content class="cententheight">
-                  SALLARIES
-                </ion-card-content>
-              </ion-card>
-            </ion-col>
-
-            <ion-col size="6">
-              <ion-card (click)="gotobills()" class="card cardc">
-
-                <ion-card-content class="cententheight">
-                  BILLS
-                </ion-card-content>
-              </ion-card>
-            </ion-col>
-
-            <ion-col size="6">
-              <ion-card (click)="generateslip()" class="card cardd">
-
-                <ion-card-content class="cententheight">
-                  FEES
-                </ion-card-content>
-              </ion-card>
-            </ion-col>
-
-          </ion-row>
-        </ion-grid>
-      </div>
-
-      <div *ngIf="width>=100 && width<900" class="cards">
-        <ion-grid>
-          <ion-row>
-            <ion-col size="8" offset="2.3">
-              <ion-card (click)="gotopayslips()" class="card carda">
-
-                <ion-card-content class="cententheight">
-                  PAY SLIPS
-                </ion-card-content>
-              </ion-card>
-            </ion-col>
-
-            <ion-col size="8" offset="2.3">
-              <ion-card (click)="sallerypage()" class="card cardb">
-
-                <ion-card-content class="cententheight">
-                  SALLARIES
-                </ion-card-content>
-              </ion-card>
-            </ion-col>
-
-            <ion-col size="8" offset="2.3">
-              <ion-card (click)="gotobills()" class="card cardc">
-
-                <ion-card-content class="cententheight">
-                  BILLS
-                </ion-card-content>
-              </ion-card>
-            </ion-col>
-
-            <ion-col size="8" offset="2.3">
-              <ion-card (click)="generateslip()" class="card cardd">
-
-                <ion-card-content class="cententheight">
-                  FEES
-                </ion-card-content>
-              </ion-card>
-            </ion-col>
-
-          </ion-row>
-        </ion-grid>
+  </ion-toolbar>
+</ion-header>
 
 
-      </div>
+<ion-content>
+  <div>
 
-      <div>
-        <div class="payroll">
-          CREATE PAYROAL GROUP
-        </div>
-        <ion-card class="removecardborder">
-          <ion-card-content>
-            <div class="payrollform">
-              <ion-list class="line-input">
-                <ion-item>
-                  <ion-input [(ngModel)]="description" placeholder="Enter description">
-                  </ion-input>
+
+    <div>
+
+      <ion-grid>
+        <ion-row>
+          <ion-col size="3">
+
+            <div id="mySidenav" class="sidenav">
+
+              <div style="padding-left: 8px;padding-right: 8px;">
+
+                <ion-item style="border-bottom: 2px solid skyblue;" *ngIf="currentDiv=='home'" color="none">
+                  <ion-label style="color: skyblue;font-weight: bold;" class="a ">
+                    <ion-icon name="home"></ion-icon>
+                    HOME
+                  </ion-label>
                 </ion-item>
-              </ion-list>
 
-              <ion-list class="line-input">
-                <ion-item>
-                  <ion-input type="number" [(ngModel)]="amount" placeholder="Enter Amount">
-                  </ion-input>
+                <ion-item *ngIf="currentDiv!='home'" color="none">
+                  <ion-label class="a label">
+                    <ion-icon name="home"></ion-icon>
+                    HOME
+                  </ion-label>
                 </ion-item>
-              </ion-list>
+
+
+                <ion-item style="border-bottom: 2px solid skyblue;" *ngIf="currentDiv=='payes'" color="none">
+                  <ion-label style="color: skyblue;font-weight: bold;" class="a">
+                    <ion-icon name="wallet"></ion-icon>
+                    PAYES
+                  </ion-label>
+                </ion-item>
+
+                <ion-item *ngIf="currentDiv!='payes'" color="none">
+                  <ion-label class="a label">
+                    <ion-icon name="wallet"></ion-icon>
+                    PAYES
+                  </ion-label>
+                </ion-item>
+
+
+
+              </div>
+            </div>
+
+          </ion-col>
+
+          <ion-col size="8">
+
+            <div *ngIf="currentDiv == 'home'" style="color: black;padding-top: 10px;">
+              <ion-label style="color: black;font-weight: bold;">
+                WELCOME
+
+                <p>to the Accountant services of Smart School Online</p>
+              </ion-label>
 
             </div>
-            <ion-button (click)="checkanduploadpayroll()" color="dark" shape="round">ADD</ion-button>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
 
-            <table class="table">
-              <tr>
-                <th>DESCRIPTION</th>
-                <th>AMOUNT</th>
-                <th>ADDED BY</th>
-              </tr>
-              <tr *ngFor="let data of payroll">
-                <th>{{data.Description}}</th>
-                <th>{{data.Amount}}</th>
-                <th>{{data.UploadedBy}}</th>
-              </tr>
-            </table>
-          </ion-card-content>
-        </ion-card>
 
-      </div>
+
 
     </div>
+
   </div>
 </ion-content>
