--- a/src/global.scss
+++ b/src/global.scss
@@ -26,5 +26,9 @@
 @import "~@ionic/angular/css/flex-utils.css";
 
 ion-content {
-    --background: white;
+    --background: rgb(243, 243, 243);
+  }
+@font-face {
+    font-family: text;
+    src: url("./assets/fonts/Roboto-Regular.ttf");
 }
