--- a/src/app/panel-home/panel-home.page.html
+++ b/src/app/panel-home/panel-home.page.html
@@ -7,7 +7,7 @@
           TheSmartSchool
         </div>
         <div class="items">
-          <ion-button class="dosisfont" (click)="managefines()" fill="outline" color="light">fines</ion-button>
+
           <ion-button (click)="logout()" class="dosisfont" fill="outline" color="light">logout</ion-button>
 
         </div>
@@ -20,8 +20,12 @@
 <ion-content>
   <div>
 
-
-    <div *ngIf="width > 740">
+    <!--
+  ///////////////////////////////////////////
+  HOME PAGE
+  /////////////////////////////
+-->
+    <div *ngIf="width > 740 && currentDiv=='home'">
 
       <ion-grid>
         <ion-row>
@@ -58,7 +62,7 @@
                   </ion-label>
                 </ion-item>
 
-                <ion-item *ngIf="currentDiv!='payes'" color="none">
+                <ion-item (click)="gotoDiv('payes')" *ngIf="currentDiv!='payes'" color="none">
                   <ion-label class="a label">
                     <ion-icon name="wallet"></ion-icon>
                     PAYES
@@ -80,7 +84,8 @@
                   </ion-label>
                 </ion-item>
 
-                <ion-item style="border-bottom: 2px solid skyblue;" *ngIf="currentDiv=='payes'" color="none">
+                <ion-item (click)="goToPage('')" style="border-bottom: 2px solid skyblue;" *ngIf="currentDiv=='payes'"
+                  color="none">
                   <ion-label style="color: skyblue;font-weight: bold;" class="a">
                     <ion-icon name="card"></ion-icon>
                     SALLERIES
@@ -385,6 +390,133 @@
 
 
 
+
+    </div>
+
+
+    <!--
+  ///////////////////////////////////////////
+ ADD AND VIEW PAYES PAGE
+  /////////////////////////////
+-->
+    <div *ngIf="currentDiv=='payes'">
+      <ion-grid>
+        <ion-row>
+          <!--
+            //////////////////////////////////////
+                    SIDE MENU
+            /////////////////////////////////////        
+          -->
+          <ion-col size="3">
+
+            <div id="mySidenav" class="sidenav">
+
+              <div style="padding-left: 8px;padding-right: 8px;">
+
+                <ion-item style="border-bottom: 2px solid skyblue;" *ngIf="currentDiv=='home'" color="none">
+                  <ion-label style="color: skyblue;font-weight: bold;" class="a ">
+                    <ion-icon name="home"></ion-icon>
+                    HOME
+                  </ion-label>
+                </ion-item>
+
+                <ion-item (click)="gotoDiv('home')" *ngIf="currentDiv!='home'" color="none">
+                  <ion-label class="a label">
+                    <ion-icon name="home"></ion-icon>
+                    HOME
+                  </ion-label>
+                </ion-item>
+
+
+                <ion-item style="border-bottom: 2px solid skyblue;" *ngIf="currentDiv=='payes'" color="none">
+                  <ion-label style="color: skyblue;font-weight: bold;" class="a">
+                    <ion-icon name="wallet"></ion-icon>
+                    PAYES
+                  </ion-label>
+                </ion-item>
+
+                <ion-item (click)="gotoDiv('payes')" *ngIf="currentDiv!='payes'" color="none">
+                  <ion-label class="a label">
+                    <ion-icon name="wallet"></ion-icon>
+                    PAYES
+                  </ion-label>
+                </ion-item>
+
+
+                <ion-item style="border-bottom: 2px solid skyblue;" *ngIf="currentDiv=='payes'" color="none">
+                  <ion-label style="color: skyblue;font-weight: bold;" class="a">
+                    <ion-icon name="pulse"></ion-icon>
+                    FINES
+                  </ion-label>
+                </ion-item>
+
+                <ion-item *ngIf="currentDiv!='payes'" color="none">
+                  <ion-label class="a label">
+                    <ion-icon name="pulse"></ion-icon>
+                    FINES
+                  </ion-label>
+                </ion-item>
+
+                <ion-item (click)="goToPage('')" style="border-bottom: 2px solid skyblue;" *ngIf="currentDiv=='payes'"
+                  color="none">
+                  <ion-label style="color: skyblue;font-weight: bold;" class="a">
+                    <ion-icon name="card"></ion-icon>
+                    SALLERIES
+                  </ion-label>
+                </ion-item>
+
+                <ion-item *ngIf="currentDiv!='payes'" color="none">
+                  <ion-label class="a label">
+                    <ion-icon name="card"></ion-icon>
+                    SALLERIES
+                  </ion-label>
+                </ion-item>
+
+
+                <ion-item style="border-bottom: 2px solid skyblue;" *ngIf="currentDiv=='payes'" color="none">
+                  <ion-label style="color: skyblue;font-weight: bold;" class="a">
+                    <ion-icon name="folder"></ion-icon>
+                    EXPENDITURE
+                  </ion-label>
+                </ion-item>
+
+                <ion-item *ngIf="currentDiv!='payes'" color="none">
+                  <ion-label class="a label">
+                    <ion-icon name="folder"></ion-icon>
+                    EXPENDITURE
+                  </ion-label>
+                </ion-item>
+
+                <ion-item style="border-bottom: 2px solid skyblue;" *ngIf="currentDiv=='payes'" color="none">
+                  <ion-label style="color: skyblue;font-weight: bold;" class="a">
+                    <ion-icon name="filter"></ion-icon>
+                    DEFAULTERS
+                  </ion-label>
+                </ion-item>
+
+                <ion-item *ngIf="currentDiv!='payes'" color="none">
+                  <ion-label class="a label">
+                    <ion-icon name="filter"></ion-icon>
+                    DEFAULTERS
+                  </ion-label>
+                </ion-item>
+
+
+                <ion-item color="none">
+                  <ion-label color="danger" style="color: red;" class=" label">
+                    <ion-icon color="danger" name="log-out"></ion-icon>
+                    LOGOUT
+                  </ion-label>
+                </ion-item>
+
+
+
+              </div>
+            </div>
+
+          </ion-col>
+        </ion-row>
+      </ion-grid>
 
     </div>
 
