--- a/src/app/admin/admin.page.html
+++ b/src/app/admin/admin.page.html
@@ -29,14 +29,6 @@
             (click)="changeShow('accountants')">
             <div class="option">Accountants</div>
           </ion-item>
-          <ion-item color="none" button mode="ios" style="background: white;color:black"
-            (click)="changeShow('requests')">
-            <div class="option">Requests</div>
-          </ion-item>
-          <ion-item color="none" button mode="ios" style="background: white;color:black"
-            (click)="changeShow('requests')">
-            <div class="option">Requests</div>
-          </ion-item>
         </ion-card>
       </ion-col>
       <ion-col size="10">
@@ -172,8 +164,83 @@
                   {{teacher.name}}
                 </ion-label>
                 <div slot="end">
-                  <ion-button color="warning">Send Warning</ion-button>
+                  <ion-button color="warning" (click) = "sendWarning(teacher.uid)">Send Warning</ion-button>
                   <ion-button color="danger" (click)="removeTeacher(teacher)">Remove</ion-button>
+                </div>
+              </ion-item>
+            </ion-card>
+          </div>
+        </div>
+
+        <div *ngIf="toShow == 'accountants'" class="toShow">
+          <div *ngIf="subOption == '' || !subOption">
+            <ion-card color="tertiary" style="display: inline-block;max-width: 400px;" mode="ios" button
+              (click)="changeSub('add')">
+              <ion-icon name="add-outline" style="font-size: 100px;"></ion-icon>
+              <ion-card-header>
+                <ion-card-title>ADD ACCOUNTANT</ion-card-title>
+              </ion-card-header>
+              <ion-card-content>
+                Use this option to create credentials for new accountant.
+              </ion-card-content>
+            </ion-card>
+            <ion-card color="tertiary" style="display: inline-block;max-width: 400px;" mode="ios" button
+              (click)="changeSub('manage')">
+              <ion-icon name="server-outline" style="font-size: 100px;"></ion-icon>
+              <ion-card-header>
+                <ion-card-title>MANAGE ACCOUNTANTS</ion-card-title>
+              </ion-card-header>
+              <ion-card-content>
+                Use this option to modify existing accountant's status etc.
+              </ion-card-content>
+            </ion-card>
+          </div>
+          <div *ngIf="subOption == 'add'" class="toShow">
+            <ion-card mode="ios" color="none" style="background: white;width: 1000px;display:inline-block">
+              <h1 style="font-size:40px;color:black;font-family: impact;">
+                ADD ACCOUNTANT CREDENTIALS
+              </h1>
+              <ion-item color="none" style="color:black;">
+                <ion-label position="fixed">Name:</ion-label>
+                <ion-input inputmode="text" required [(ngModel)]="name"></ion-input>
+              </ion-item>
+              <ion-item color="none" style="color:black;">
+                <ion-label position="fixed">Phone:</ion-label>
+                <ion-input inputmode="numeric" required [(ngModel)]="phone"></ion-input>
+              </ion-item>
+              <ion-item color="none" style="color:black;">
+                <ion-label position="fixed">Email:</ion-label>
+                <ion-input inputmode="email" required [(ngModel)]="email"></ion-input>
+              </ion-item>
+              <ion-item color="none" style="color:black;">
+                <ion-label position="fixed">Password:</ion-label>
+                <ion-input type="password" inputmode="text" required [(ngModel)]="password"></ion-input>
+              </ion-item>
+              <ion-item color="none" style="color:black;">
+                <ion-label position="fixed">Salary:</ion-label>
+                <ion-input inputmode="numeric" type="number" required [(ngModel)]="salary"></ion-input>
+              </ion-item>
+              <ion-button size="full" fill="clear" style="font-family: impact;font-size:40px;" (click)="addAccountant()">
+                Submit</ion-button>
+            </ion-card>
+          </div>
+
+          <div *ngIf="subOption == 'manage'" class="toShow" style="color:black;" lines="medium">
+            <ion-card mode="ios" color="none"
+              style="background: white;width: 1000px;display:inline-block;max-height: 300px;overflow-x: auto;">
+              <ion-item color="tertiary" style="color:rgb(255, 255, 255);font-family: impact;font-size:50px;">
+                <div style="padding:10px;">
+                  Available Accountants
+                </div>
+              </ion-item>
+              <ion-item *ngFor="let teacher of accountants" color="none" style="color:black;">
+                <ion-icon name="person-circle-outline"></ion-icon>
+                <ion-label style="padding-left:10px;">
+                  {{teacher.name}}
+                </ion-label>
+                <div slot="end">
+                  <ion-button color="warning" (click) = "sendWarning(teacher.uid)">Send Warning</ion-button>
+                  <ion-button color="danger" (click)="removeAccountant(teacher)">Remove</ion-button>
                 </div>
               </ion-item>
             </ion-card>
@@ -247,7 +314,7 @@
                   {{student.name}}
                 </ion-label>
                 <div slot="end">
-                  <ion-button color="warning">Send Warning</ion-button>
+                  <ion-button color="warning" (click) = "sendWarning(student.uid)">Send Warning</ion-button>
                   <ion-button color="danger" (click)="removeStudent(student)">Remove</ion-button>
                 </div>
               </ion-item>
